--- a/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/App.module.scss
+++ b/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/App.module.scss
@@ -1,21 +1,21 @@
 @import './variables.scss';
 
-.App {
+.app {
     text-align: center;
 }
 
-.App-logo {
+.appLogo {
     height: 40vmin;
     pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
+    .appLogo {
+        animation: appLogoSpin infinite 20s linear;
     }
 }
 
-.App-header {
+.appHeader {
     background-color: $primary-color;
     min-height: 100vh;
     display: flex;
@@ -26,11 +26,11 @@
     color: white;
 }
 
-.App-link {
+.appLink {
     color: $secondary-color;
 }
 
-@keyframes App-logo-spin {
+@keyframes appLogoSpin {
     from {
         transform: rotate(0deg);
     }
