--- a/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/components/Burger/BuildControls/BuildControls.module.scss
+++ b/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/components/Burger/BuildControls/BuildControls.module.scss
@@ -1,4 +1,18 @@
+/*
 .BuildControls {
+    width: 100%;
+    background-color: #cf8f2e;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    box-shadow: 0 2px 1px #ccc;
+    margin: auto;
+    padding: 10px 0;
+}
+*/
+
+.BuildControls {
+    flex: 0 0 auto;
     width: 100%;
     background-color: #cf8f2e;
     display: flex;
