--- a/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/components/Burger/Burger.module.scss
+++ b/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/components/Burger/Burger.module.scss
@@ -1,30 +1,30 @@
-.burger {
-    width: 100%;
+.Burger {
     margin: auto;
-    height: 250px;
-    overflow: scroll;
+    overflow: auto;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
+    flex: 1 0 auto;
+    width: 50vh;
 }
 
-@media (min-width: 500px) and (min-height: 400px) {
-    .burger {
-        width: 350px;
+@media (min-width: 400px) and (min-height: 400px) {
+    .Burger {
+        width: 300px;
         height: 300px;
     }
 }
 
 @media (min-width: 500px) and (min-height: 401px) {
-    .burger {
-        width: 450px;
-        height: 400px;
+    .Burger {
+        width: 400px;
+        height: 300px;
     }
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
-    .burger {
-        width: 700px;
-        height: 600px;
+    .Burger {
+        width: 600px;
+        height: 350px;
     }
 }
