--- a/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/components/Layout/Layout.module.scss
+++ b/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/src/components/Layout/Layout.module.scss
@@ -1,3 +1,6 @@
-.content {
-    margin-top: 16px;
+.Content {
+    margin-top: 72px;
+    height: calc(100vh - 72px);
+    display: flex;
+    flex-direction: column;
 }
